appId: community.blacksky.app
---
- launchApp:
    appId: 'community.blacksky.app'
    clearState: true
    arguments:
      '-EXDevMenuIsOnboardingFinished': true
- runFlow:
    when:
      platform: iOS
    commands:
      - openLink: 'exp+blacksky://expo-development-client/?url=http%3A%2F%2Flocalhost%3A8082'
      - runFlow:
          when:
            visible: 'Open in "Blacksky"'
          commands:
            - tapOn: Open
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'http://10.0.2.2:8082'
      - runFlow:
          label: 'Dismiss Expo dev menu'
          when:
            visible: 'Continue'
          commands:
            - back
- tapOn:
    id: e2eProxyHeaderInput
- inputText: ${output.result}
- pressKey: Enter
